--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "dependencies": {
     "@3rdweb/hooks": "^1.6.0",
     "@3rdweb/sdk": "^1.27.1",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^13.5.0",
     "@thirdweb-dev/react": "^2.0.4",
     "@thirdweb-dev/sdk": "^2.0.26",
     "@vitejs/plugin-react-refresh": "^1.3.6",
@@ -17,7 +20,8 @@
     "ethers": "^5.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.0"
+    "react-scripts": "^4.0.0",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
