--- a/package.json
+++ b/package.json
@@ -1,25 +1,17 @@
 {
-  "name": "mydao",
+  "name": "buildspace-v2",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-    "node": ">=14.0.0"
-  },
   "dependencies": {
-    "@3rdweb/hooks": "^1.6.0",
-    "@3rdweb/sdk": "^1.27.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "@thirdweb-dev/react": "^2.0.4",
-    "@thirdweb-dev/sdk": "^2.0.26",
-    "@vitejs/plugin-react-refresh": "^1.3.6",
-    "dotenv": "^10.0.0",
-    "ether": "^0.0.9",
-    "ethers": "^5.6.2",
+    "@thirdweb-dev/react": "^2.0.1",
+    "@thirdweb-dev/sdk": "^2.0.14",
+    "ethers": "^5.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.0",
+    "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,9 +26,16 @@
       "react-app/jest"
     ]
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not op_mini all"
-  ]
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
